--- a/destinations.html
+++ b/destinations.html
@@ -36,10 +36,12 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a href="./index.html" class="nav-link active">Home</a>
+                <a href="./index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="./destinations.html" class="nav-link">Destinations</a>
+                <a href="./destinations.html" class="nav-link active"
+                  >Destinations</a
+                >
               </li>
               <li class="nav-item">
                 <a href="./travelReport.html" class="nav-link">Travel Report</a>
@@ -53,7 +55,100 @@
       </nav>
     </header>
 
-    <main class="container my-4"></main>
+    <main class="container my-4">
+      <h1>List of Travel Destinations</h1>
+      <div class="row py-3 g-4">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Paris</h5>
+              <p class="card-text"><strong>Country:</strong> France</p>
+              <p class="card-text">
+                <strong>Highlights:</strong> Eiffel Tower, Louvre Museum
+              </p>
+              <a href="./destination-detail.html?id=1" class="btn btn-primary"
+                >Details</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Tokyo</h5>
+              <p class="card-text"><strong>Country:</strong> Japan</p>
+              <p class="card-text">
+                <strong>Highlights:</strong> Tokyo Tower, Meiji Shrine
+              </p>
+              <a href="./destination-detail.html?id=2" class="btn btn-primary"
+                >Details</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Rome</h5>
+              <p class="card-text"><strong>Country:</strong> Italy</p>
+              <p class="card-text">
+                <strong>Highlights:</strong> Colosseum, Vatican City
+              </p>
+              <a href="./destination-detail.html?id=3" class="btn btn-primary"
+                >Details</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">New York City</h5>
+              <p class="card-text"><strong>Country:</strong> United States</p>
+              <p class="card-text">
+                <strong>Highlights:</strong> Statue of Liberty, Central Park
+              </p>
+              <a href="./destination-detail.html?id=4" class="btn btn-primary"
+                >Details</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Cape Town</h5>
+              <p class="card-text"><strong>Country:</strong> South Africa</p>
+              <p class="card-text">
+                <strong>Highlights:</strong> Table Mountain, Robben Island
+              </p>
+              <a href="./destination-detail.html?id=5" class="btn btn-primary"
+                >Details</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Sydney</h5>
+              <p class="card-text"><strong>Country:</strong> Australia</p>
+              <p class="card-text">
+                <strong>Highlights:</strong> Sydney Opera House, Bondi Beach
+              </p>
+              <a href="./destination-detail.html?id=6" class="btn btn-primary"
+                >Details</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <footer class="bg-dark text-white py-3">
       <div class="container">
