--- a/travelReport.html
+++ b/travelReport.html
@@ -36,13 +36,15 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a href="./index.html" class="nav-link active">Home</a>
+                <a href="./index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
                 <a href="./destinations.html" class="nav-link">Destinations</a>
               </li>
               <li class="nav-item">
-                <a href="./travelReport.html" class="nav-link">Travel Report</a>
+                <a href="./travelReport.html" class="nav-link active"
+                  >Travel Report</a
+                >
               </li>
               <li class="nav-item">
                 <a href="./travelTips.html" class="nav-link">Travel Tips</a>
@@ -53,12 +55,43 @@
       </nav>
     </header>
 
-    <main class="container my-4"></main>
+    <main class="container my-4">
+      <h1>Travel Report</h1>
+      <div class="row py-4 g-4">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-header bg-primary text-white">
+              <h2>Top-Rated Destination</h2>
+            </div>
+            <div class="card-body">
+              <p class="card-text"><strong>destination:</strong> Paris</p>
+              <p class="card-text"><strong>rating:</strong> 9.5</p>
+              <p class="card-text">
+                <strong>highlights:</strong> Eiffel Tower, Louvre Museum
+              </p>
+              <p class="card-text">
+                <strong>comments:</strong> Breathtaking views and rich history.
+              </p>
+            </div>
+          </div>
+        </div>
 
-    <footer class="bg-dark text-white py-3">
-      <div class="container">
-        <p>&copy; 2023 Travel Company. All rights reserved.</p>
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-header bg-primary text-white">
+              <h2>Most Visited Country</h2>
+            </div>
+            <div class="card-body">
+              <p class="card-text"><strong>country:</strong> Japan</p>
+              <p class="card-text"><strong>totalDestinations:</strong> 5</p>
+              <p class="card-text">
+                <strong>popularDestinations:</strong> Tokyo, Kyoto, Osaka,
+                Hiroshima, Nara.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-    </footer>
+    </main>
   </body>
 </html>
