--- a/travelTips.html
+++ b/travelTips.html
@@ -36,7 +36,7 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a href="./index.html" class="nav-link active">Home</a>
+                <a href="./index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
                 <a href="./destinations.html" class="nav-link">Destinations</a>
@@ -45,7 +45,9 @@
                 <a href="./travelReport.html" class="nav-link">Travel Report</a>
               </li>
               <li class="nav-item">
-                <a href="./travelTips.html" class="nav-link">Travel Tips</a>
+                <a href="./travelTips.html" class="nav-link active"
+                  >Travel Tips</a
+                >
               </li>
             </ul>
           </div>
@@ -53,7 +55,73 @@
       </nav>
     </header>
 
-    <main class="container my-4"></main>
+    <main class="container my-4">
+      <h1>Travel Tips</h1>
+      <div class="row py-4 g-4">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">Pack Light</h2>
+              <p class="card-text">
+                Only pack essentials to make your journey more comfortable.
+                Check the weather of your destination and pack accordingly.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">Plan Your Itinerary</h2>
+              <p class="card-text">
+                Plan your activities in advance to make the most of your time at
+                the destination. Include must-see attractions and leave room for
+                spontaneous exploration.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">Stay Hydrated</h2>
+              <p class="card-text">
+                Traveling can be dehydrating, so remember to drink plenty of
+                water. It's essential for staying healthy on the road.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">Learn Local Customs</h2>
+              <p class="card-text">
+                Before you travel, research and learn about the local customs
+                and etiquette of the destinations. This will help you respect
+                and connect with the local culture.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">Keep Important Documents Safe</h2>
+              <p class="card-text">
+                Make photocopies of your passport, ID, and other important
+                documents. Keep them in a separate place from the originals in
+                case of loss or theft.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <footer class="bg-dark text-white py-3">
       <div class="container">
